# rbuilder

./: Cargo.toml  Dockerfile  Dockerfile.op-rbuilder  Dockerfile.rbuilder  Dockerfile.reth-rbuilder  config-live-example.toml
.github/workflows/: checks.yaml  checks_docker.yaml  release-op.yaml  release.yaml
crates/eth-sparse-mpt/src/: utils.rs
crates/eth-sparse-mpt/src/reth_sparse_trie/: mod.rs  shared_cache.rs
crates/eth-sparse-mpt/src/sparse_mpt/: fixed_trie.rs
crates/neth-rbuilder/: Cargo.toml
crates/neth-rbuilder/src/: main.rs
crates/op-rbuilder/: Cargo.toml
crates/op-rbuilder/node/: Cargo.toml
crates/op-rbuilder/node/src/: node.rs
crates/op-rbuilder/payload_builder/: Cargo.toml
crates/op-rbuilder/src/: args.rs  generator.rs  main.rs  payload_builder.rs  payload_builder_vanilla.rs  supervisor.rs  tx_signer.rs
crates/op-rbuilder/src/integration/: integration_test.rs  mod.rs
crates/op-rbuilder/src/primitives/: execution.rs  helpers.rs  mod.rs  payload_builder_ctx.rs  payload_builder_service.rs
crates/op-rbuilder/src/tester/: mod.rs
crates/rbuilder/: Cargo.toml
crates/rbuilder/benches/benchmarks/: mev_boost.rs  txpool_fetcher.rs
crates/rbuilder/src/: lib.rs  validation_api_client.rs
crates/rbuilder/src/backtest/: backtest_build_block.rs  backtest_build_range.rs  execute.rs
crates/rbuilder/src/building/: evm_inspector.rs  mod.rs  order_commit.rs  (+2 more)
crates/reth-rbuilder/: Cargo.toml
crates/reth-rbuilder/src/: main.rs
crates/test-relay/src/: main.rs  relay.rs  validation_api_client.rs
crates/transaction-pool-bundle-ext/: Cargo.toml
(+71 files in other folders)
